# CovidEngine

./: CMakeLists.txt
App/test/: gameLoopTest.cpp
Engine/: CovidEngine.h
Engine/engine/: GameLoop.cpp  GameLoop.h
Engine/graphics/: Animation.cpp  Animation.h  Graphics.cpp  Graphics.h  Particle.cpp  Particle.h  WindowManager.cpp  WindowManager.h
Engine/resources/: ImageResource.cpp  ImageResource.h
